# STPtoCNC

./: AGENTS.md  Launch NC1 Converter.lnk  README.md  nest-1.cnc  nest-2.cnc  old sample nest.cnc  pp1016 old sample.cnc  pyproject.toml
Won't nest together/: A2001.nc1  A2002.nc1
cnc to compare/: ms2019 Legacy.cnc  ms2019-ML.cnc  ms2019.nc1
cnc to compare/1 Inch/: 2472 batch.cnc  ms2015.nc1  ms2016.nc1  ms2019.nc1  ms2020.nc1  ms2022.nc1  ms2023.nc1  ms2024.nc1  ms2025.nc1
cnc to compare/1.5 Inch/: 2472 batch 1 1-2.cnc  ms2036.nc1  ms2038.nc1  ms2039.nc1
docs/: M Codes.csv  M Codes.xlsx  R1002-QC.cnc  R1002.nc1  R1005-QC.cnc  R1005.nc1  as1007 25-41-QC.cnc  as1007.nc1  as1019 25-41-QC.cnc  as1019.nc1  emi_machine_profile.sample.json  h1001-QC.cnc  h1001.nc1  ms2019-ML.cnc  ms2019-QC.cnc  piecemaker_manual_alignment.md  pp1007-QC.cnc  pp1007.nc1  pp1016-QC.cnc  pp1016.nc1  pp1027-QC.cnc  pp1027.nc1  roadmap.md
scripts/: launch_stptocnc_gui.bat
src/stptocnc/gui/: app.py  (+1 more)
tests/: test_calibration_workflow.py  test_cli_calibration.py  test_cli_conformance.py  test_cli_help_text.py  test_cli_inspect_nc1.py  test_cli_operator_run.py  test_cnc_conformance.py  test_cnc_inspector.py  test_cutlist_export.py  test_emi_machine_profile.py  test_emi_writer.py  test_finalize_workflow.py  test_gui_preview.py  test_manual_reassignment.py  test_nc1_hss_angle.py  test_nc1_parser.py  test_nc1_real_sample.py  test_nc1_to_emi.py  test_nested_emi_writer.py  test_nesting_adjacency.py  test_nesting_defaults.py  test_nesting_drop_reuse.py  test_operator_run.py  test_packaging_assets.py
(+32 files in other folders)
